# valence

./: Cargo.toml
benches/: packet.rs
crates/java_string/src/: cesu8.rs  slice.rs
crates/valence_advancement/: Cargo.toml
crates/valence_advancement/src/: lib.rs
crates/valence_anvil/src/: lib.rs  parsing.rs
crates/valence_binary/: Cargo.toml
crates/valence_binary/src/: array.rs  direction.rs  id_or.rs  id_set.rs  lib.rs  registry_id.rs  text_component.rs
crates/valence_binary/src/impls/: other.rs
crates/valence_boss_bar/: Cargo.toml
crates/valence_boss_bar/src/: components.rs  lib.rs
crates/valence_command/: Cargo.toml
crates/valence_command/src/: parsers.rs
crates/valence_entity/: Cargo.toml  build.rs
crates/valence_entity/extracted/: entities.json
crates/valence_entity/src/: active_status_effects.rs  attributes.rs  hitbox.rs  lib.rs  query.rs  registry.rs  tracked_data.rs
crates/valence_equipment/src/: lib.rs
crates/valence_generated/: Cargo.toml
crates/valence_generated/extracted/: items.json
crates/valence_generated/src/: lib.rs
crates/valence_inventory/: Cargo.toml
crates/valence_inventory/src/: lib.rs  validate.rs
crates/valence_item/: Cargo.toml
crates/valence_item/src/: components.rs  impls.rs  lib.rs  stack.rs  vanilla_components.rs
crates/valence_math/src/: aabb.rs
crates/valence_nbt/src/: lib.rs
crates/valence_network/: Cargo.toml
crates/valence_network/src/: connect.rs  lib.rs  packet_io.rs
crates/valence_player_list/: Cargo.toml
crates/valence_player_list/src/: lib.rs
crates/valence_protocol/: Cargo.toml
crates/valence_protocol/src/: array.rs  bit_set.rs  block_pos.rs  byte_angle.rs  chunk_pos.rs  chunk_section_pos.rs  decode.rs  direction.rs  encode.rs  game_mode.rs  global_pos.rs  hash_utils.rs  impls.rs  item.rs  lib.rs  movement_flags.rs  profile.rs  sound.rs  text_component.rs  velocity.rs
crates/valence_protocol_macros/src/: encode.rs  packet.rs
crates/valence_registry/: Cargo.toml
crates/valence_scoreboard/: Cargo.toml
crates/valence_server/: Cargo.toml
crates/valence_server_common/: Cargo.toml
crates/valence_text/: Cargo.toml
crates/valence_weather/: Cargo.toml
examples/: anvil_loading.rs  ctf.rs  equipment.rs  item_components.rs  particles.rs  potions.rs
src/: lib.rs  testing.rs
src/tests/: inventory.rs  layer.rs  potions.rs  weather.rs
tools/packet_inspector/: Cargo.toml
tools/playground/: Cargo.toml
tools/stresser/: Cargo.toml
(+280 files in other folders)
