[package]
name = "valence_binary"
version.workspace = true
edition.workspace = true
repository.workspace = true
documentation.workspace = true
license.workspace = true

[dependencies]
valence_generated.workspace = true
uuid.workspace = true
indexmap.workspace = true
valence_nbt.workspace = true
serde.workspace = true
anyhow.workspace = true
byteorder.workspace = true
thiserror.workspace = true
derive_more.workspace = true
rand.workspace = true
valence_text.workspace = true
valence_ident.workspace = true
valence_math.workspace = true
serde_json.workspace = true
valence_protocol_macros.workspace = true

[lints]
workspace = true
