[package]
name = "valence_binary"
version.workspace = true
edition.workspace = true
repository.workspace = true
documentation.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
byteorder.workspace = true
derive_more.workspace = true
indexmap.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
valence_generated.workspace = true
valence_ident.workspace = true
valence_math.workspace = true
valence_nbt.workspace = true
valence_protocol_macros.workspace = true
valence_text.workspace = true

[lints]
workspace = true
